# baxus-ai-agent-bob

./: .dockerignore  .env.example  README.md  api.py  api.rest  bob.py  docker-compose.yml  pyproject.toml  recommend.py  requirements.txt  schema.sql  setup_database.py
agent/: __init__.py  conversation_graph.py
data/: README.md  baxus-asset-sample.json  baxus-listings-sample.json  bottles.json  user.json
docker/: Dockerfile  docker-compose.yml
docker/pgadmin-config/: servers.json
knowledge/: retriever.py
recommender/: bottle_recommender.py
scripts/: README.md  bottle_vector_utils.py  clean_listings.py  filter_bottles.py  ingest_bottles_to_pgvector.py  inventory_bottles.py  quickstart.py  run_enrichment_and_ingestion.py  search_bottles.py
state/: agent_state.py
utils/: analysis_utils.py  bottle_utils.py  db_utils.py  error_utils.py  logging_utils.py
