[project]
name = "baxus-bob"
version = "0.1.0"
description = "BAXUS AI Agent BOB"
authors = [{ name = "Soona", email = "code@chainsona.dev" }]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core (>=0.10.5,<0.11.0)",
    "openai (>=1.76.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "graphiti (>=0.1.13,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "psycopg[binary,pool] (>=3.1.12,<4.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langgraph (>=0.3.34,<0.4.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
# name = "baxus-bob"
# version = "0.1.0"
# description = "BAXUS Whisky Recommendation AI Agent"
# authors = ["Your Name <your.email@example.com>"]
# readme = "README.md"
# packages = [{ include = "*.py" }]

# [tool.poetry.dependencies]
# python = "^3.10"
# langchain = "^0.1.0"
# langchain-openai = "^0.0.2"
# langgraph = "^0.0.20"
# psycopg = { extras = ["binary", "pool"], version = "^3.1.12" }
# pgvector = "^0.2.3"
# python-dotenv = "^1.0.0"
# pandas = "^2.1.1"
# numpy = "^1.26.0"
# openai = "^1.3.5"
# pydantic = "^2.4.2"
# fastapi = "^0.104.1"
# uvicorn = "^0.23.2"

# [tool.poetry.group.dev.dependencies]
# black = "^23.10.1"
# isort = "^5.12.0"
# pytest = "^7.4.3"
# pytest-asyncio = "^0.21.1"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
