[project]
name = "baxus-ai-agent-bob"
version = "0.1.0"
description = "BAXUS AI Agent BOB"
authors = [{ name = "Soona", email = "code@chainsona.dev" }]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "graphiti-core (>=0.10.5,<0.11.0)",
    "openai (>=1.76.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "graphiti (>=0.1.13,<0.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "psycopg[binary,pool] (>=3.1.12,<4.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langgraph (>=0.3.34,<0.4.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.poetry.scripts]
start = "api:app"
